* Warnings were not properly aligned (index.css)[Bug 4022]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9568 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1896,6 +1896,16 @@ p#whoisviewing
 {
 	margin-top: 0.5em;
 }
+.poster li.warning
+{
+	line-height: 1.2em;
+	padding-top: 1em;
+}
+.poster li.warning a img
+{
+	vertical-align: bottom;
+	padding: 0 0.2em;
+}
 .messageicon
 {
 	float: left;
